--- a/Tests/WorkSpeed.Data.Tests/App.config
+++ b/Tests/WorkSpeed.Data.Tests/App.config
@@ -1,7 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <connectionString>
-        <add name="Default"
-             connectionString="Server=(localdb)\MSSQLLocalDB;Database=WorkSpeedTestDb;Trusted_Connection=True;"/>
-    </connectionString>
+
+    <runtime>
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <dependentAssembly>
+                <assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+            </dependentAssembly>
+        </assemblyBinding>
+    </runtime>
+
+    <connectionStrings>
+        <add name="Default" connectionString="Server=(localdb)\MSSQLLocalDb;Database=WorkSpeedTestDb;Trusted_Connection=True;" />
+    </connectionStrings>
+
 </configuration>
