-update WorkSpeed.Data project

--- a/Code/WorkSpeed.Data/app.config
+++ b/Code/WorkSpeed.Data/app.config
@@ -8,7 +8,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
     <connectionStrings>
-        <add name="Default" connectionString="Server=(localdb)\MSSQLLocalDb;Database=WorkSpeedTestDb;Trusted_Connection=True;" />
+        <add name="Default" connectionString="Server=(localdb)\MSSQLLocalDb;Database=WorkSpeedDb;Trusted_Connection=True;" />
     </connectionStrings>
+
+
 </configuration>
