--- a/Tests/WorkSpeed.Import.Tests/WorkSpeed.Import.Tests.csproj
+++ b/Tests/WorkSpeed.Import.Tests/WorkSpeed.Import.Tests.csproj
@@ -63,6 +63,9 @@
     <Content Include="TestFiles\test">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="TestFiles\empty.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Code\WorkSpeed.Import\WorkSpeed.Import.csproj">
