-ref WorkSpeed.Import

--- a/Code/WorkSpeed.Import/WorkSpeed.Import.csproj
+++ b/Code/WorkSpeed.Import/WorkSpeed.Import.csproj
@@ -57,6 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataImporter.cs" />
+    <Compile Include="ExcelImporter.cs" />
+    <Compile Include="IConcreteImporter.cs" />
     <Compile Include="IDataImporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
