--- a/Code/WorkSpeed.Import/WorkSpeed.Import.csproj
+++ b/Code/WorkSpeed.Import/WorkSpeed.Import.csproj
@@ -56,11 +56,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\HeaderAttribute.cs" />
+    <Compile Include="Attributes\HeadlessAttribute.cs" />
     <Compile Include="DataImporter.cs" />
     <Compile Include="ExcelImporter.cs" />
     <Compile Include="IConcreteImporter.cs" />
     <Compile Include="IDataImporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableRect.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
