--- a/Tests/WorkSpeed.Import.Tests/packages.config
+++ b/Tests/WorkSpeed.Import.Tests/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NPOI" version="2.4.0" targetFramework="net471" />
   <package id="NUnit" version="3.11.0" targetFramework="net471" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net471" />
 </packages>
