-add StringHelper, continue modeling ProductivityCalculator, add 2003 excel file handler in ExcelImporter

--- a/Code/WorkSpeed.Import/WorkSpeed.Import.csproj
+++ b/Code/WorkSpeed.Import/WorkSpeed.Import.csproj
@@ -63,6 +63,7 @@
     <Compile Include="IConcreteImporter.cs" />
     <Compile Include="IDataImporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringHelper.cs" />
     <Compile Include="TableRect.cs" />
   </ItemGroup>
   <ItemGroup>
