--- a/Code/WorkSpeed.Manager/WorkSpeed.Manager.csproj
+++ b/Code/WorkSpeed.Manager/WorkSpeed.Manager.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Categories.cs" />
     <Compile Include="Models\OperationDetails.cs" />
     <Compile Include="Models\Productivity.cs" />
     <Compile Include="Models\TempAction.cs" />
