--- a/Code/WorkSpeed.Import/WorkSpeed.Import.csproj
+++ b/Code/WorkSpeed.Import/WorkSpeed.Import.csproj
@@ -47,6 +47,9 @@
       <HintPath>..\..\packages\NPOI.2.4.0\lib\net40\NPOI.OpenXmlFormats.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Collections.Immutable, Version=1.2.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Collections.Immutable.1.5.0\lib\netstandard2.0\System.Collections.Immutable.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -57,13 +60,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\HeaderAttribute.cs" />
+    <Compile Include="Attributes\HeaderVariationsAttribute.cs" />
     <Compile Include="Attributes\HeadlessAttribute.cs" />
-    <Compile Include="DataImporter.cs" />
+    <Compile Include="Importer.cs" />
     <Compile Include="ExcelImporter.cs" />
     <Compile Include="IConcreteImporter.cs" />
     <Compile Include="IDataImporter.cs" />
+    <Compile Include="ITypeRepository.cs" />
     <Compile Include="Models\GatheringImportModel.cs" />
+    <Compile Include="Models\ImportModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadOnlyHashSet.cs" />
     <Compile Include="StringHelper.cs" />
     <Compile Include="TableRect.cs" />
     <Compile Include="TypeRepository.cs" />
