--- a/Code/WorkSpeed.Import/WorkSpeed.Import.csproj
+++ b/Code/WorkSpeed.Import/WorkSpeed.Import.csproj
@@ -67,8 +67,13 @@
     <Compile Include="IConcreteImporter.cs" />
     <Compile Include="IDataImporter.cs" />
     <Compile Include="ITypeRepository.cs" />
+    <Compile Include="Models\BaseImportModel.cs" />
+    <Compile Include="Models\BaseProductivityImportModel.cs" />
     <Compile Include="Models\GatheringImportModel.cs" />
-    <Compile Include="Models\ImportModel.cs" />
+    <Compile Include="Models\ProductivityImportModel.cs" />
+    <Compile Include="Models\InventoryImportModel.cs" />
+    <Compile Include="Models\ReceptionImportModel.cs" />
+    <Compile Include="Models\ShipmentImportModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlyHashSet.cs" />
     <Compile Include="StringHelper.cs" />
