--- a/Tests/WorkSpeed.Import.Tests/WorkSpeed.Import.Tests.csproj
+++ b/Tests/WorkSpeed.Import.Tests/WorkSpeed.Import.Tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="TestHelper.cs" />
     <Compile Include="UnitTests\DataImporterUnitTests.cs" />
     <Compile Include="UnitTests\ExcelImporterUnitTests.cs" />
+    <Compile Include="UnitTests\ImporterUnitTests.cs" />
     <Compile Include="UnitTests\StringHelperUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
