--- a/Tests/WorkSpeed.Import.Tests/WorkSpeed.Import.Tests.csproj
+++ b/Tests/WorkSpeed.Import.Tests/WorkSpeed.Import.Tests.csproj
@@ -114,6 +114,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="IntagretionTests\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
