--- a/Code/WorkSpeed.Import/WorkSpeed.Import.csproj
+++ b/Code/WorkSpeed.Import/WorkSpeed.Import.csproj
@@ -67,16 +67,25 @@
     <Compile Include="IConcreteImporter.cs" />
     <Compile Include="IFileImporter.cs" />
     <Compile Include="ITypeRepository.cs" />
-    <Compile Include="Models\BaseImportModel.cs" />
-    <Compile Include="Models\BaseProductivityImportModel.cs" />
-    <Compile Include="Models\Dims.cs" />
-    <Compile Include="Models\GatheringImportModel.cs" />
-    <Compile Include="Models\ImportedProduct.cs" />
-    <Compile Include="Models\ProductivityImportModel.cs" />
-    <Compile Include="Models\InventoryImportModel.cs" />
-    <Compile Include="Models\ProductMgh.cs" />
-    <Compile Include="Models\ReceptionImportModel.cs" />
-    <Compile Include="Models\ShipmentImportModel.cs" />
+    <Compile Include="Models\FileModels\BaseImportModel.cs" />
+    <Compile Include="Models\FileModels\BaseProductivityImportModel.cs" />
+    <Compile Include="Models\ImportModels\ImportedActionDetailsBase.cs" />
+    <Compile Include="Models\ImportModels\Dims.cs" />
+    <Compile Include="Models\FileModels\GatheringImportModel.cs" />
+    <Compile Include="Models\ImportModels\ImportedCommonActionDetails.cs" />
+    <Compile Include="Models\ImportModels\ImportedGatheringActionDetails.cs" />
+    <Compile Include="Models\ImportModels\ImportedAction.cs" />
+    <Compile Include="Models\ImportModels\ImportedAddress.cs" />
+    <Compile Include="Models\ImportModels\ImportedInventoryActionDetails.cs" />
+    <Compile Include="Models\ImportModels\ImportedOperation.cs" />
+    <Compile Include="Models\ImportModels\ImportedProduct.cs" />
+    <Compile Include="Models\FileModels\ProductivityImportModel.cs" />
+    <Compile Include="Models\FileModels\InventoryImportModel.cs" />
+    <Compile Include="Models\ImportModels\ImportedReceptionActionDetails.cs" />
+    <Compile Include="Models\ImportModels\ImportedShipmentActionDetails.cs" />
+    <Compile Include="Models\ImportModels\ProductMgh.cs" />
+    <Compile Include="Models\FileModels\ReceptionImportModel.cs" />
+    <Compile Include="Models\FileModels\ShipmentImportModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlyHashSet.cs" />
     <Compile Include="StringHelper.cs" />
@@ -86,6 +95,8 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="FileImporters\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
