--- a/Code/WorkSpeed.Import/WorkSpeed.Import.csproj
+++ b/Code/WorkSpeed.Import/WorkSpeed.Import.csproj
@@ -63,12 +63,13 @@
     <Compile Include="Attributes\HeaderVariationsAttribute.cs" />
     <Compile Include="Attributes\HeadlessAttribute.cs" />
     <Compile Include="Importer.cs" />
-    <Compile Include="ExcelImporter.cs" />
+    <Compile Include="FileImporters\ExcelImporter.cs" />
     <Compile Include="IConcreteImporter.cs" />
-    <Compile Include="IFileImporter.cs" />
+    <Compile Include="FileImporters\IFileImporter.cs" />
     <Compile Include="ITypeRepository.cs" />
     <Compile Include="Models\FileModels\BaseImportModel.cs" />
     <Compile Include="Models\FileModels\BaseProductivityImportModel.cs" />
+    <Compile Include="Models\ImportModels\IImportedAction.cs" />
     <Compile Include="Models\ImportModels\ImportedActionDetailsBase.cs" />
     <Compile Include="Models\ImportModels\Dims.cs" />
     <Compile Include="Models\FileModels\GatheringImportModel.cs" />
@@ -96,7 +97,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="FileImporters\" />
+    <ProjectReference Include="..\WorkSpeed\WorkSpeed.csproj">
+      <Project>{035d995a-6f8a-47c1-aebd-41b2cc5d6d7d}</Project>
+      <Name>WorkSpeed</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
