--- a/Tests/WorkSpeed.Manager.Tests/WorkSpeed.Manager.Tests.csproj
+++ b/Tests/WorkSpeed.Manager.Tests/WorkSpeed.Manager.Tests.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="IntegrationalTests\" />
+    <Folder Include="UnitTests\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
