--- a/Code/ExcelImporter/ExcelImporter.csproj
+++ b/Code/ExcelImporter/ExcelImporter.csproj
@@ -54,14 +54,16 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\HeaderAttribute.cs" />
-    <Compile Include="Attributes\HeaderVariationsAttribute.cs" />
-    <Compile Include="Attributes\HeadlessAttribute.cs" />
+    <Compile Include="Attributes\HeaderlessAttribute.cs" />
     <Compile Include="Attributes\HiddenAttribute.cs" />
+    <Compile Include="CellPoint.cs" />
     <Compile Include="ExcelImporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SheetTable.cs" />
     <Compile Include="TableRect.cs" />
   </ItemGroup>
   <ItemGroup>
