--- a/Tests/ExcelImporterTests/ExcelImporter.Tests.csproj
+++ b/Tests/ExcelImporterTests/ExcelImporter.Tests.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{0943E858-2173-4084-AFC8-C0524D8CB825}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>ExcelImporterTests</RootNamespace>
-    <AssemblyName>ExcelImporterTests</AssemblyName>
+    <RootNamespace>ExcelImporter.Tests</RootNamespace>
+    <AssemblyName>ExcelImporter.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -80,8 +80,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Factory\SheetFactory.cs" />
+    <Compile Include="Factory\MockedSheetFactory.cs" />
+    <Compile Include="Factory\TypeFactory.cs" />
+    <Compile Include="IntegrationalTests\ExcelImporterIntegrationalTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTests\ExcelImporterUnitTests.cs" />
     <Compile Include="UnitTests\SheetTableUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -93,7 +96,12 @@
       <Project>{47680bf8-c76a-44b9-bde3-694f1a73ccb1}</Project>
       <Name>ExcelImporter</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Code\Helpers\Helpers.csproj">
+      <Project>{12faa7bd-a5d4-48e3-80c4-6d7a72be99b0}</Project>
+      <Name>Helpers</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
