--- a/Tests/ExcelImporterTests/ExcelImporter.Tests.csproj
+++ b/Tests/ExcelImporterTests/ExcelImporter.Tests.csproj
@@ -81,7 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Factory\MockedSheetFactory.cs" />
-    <Compile Include="Factory\TypeFactory.cs" />
+    <Compile Include="Factory\TypeExcelFactory.cs" />
     <Compile Include="IntegrationalTests\ExcelImporterIntegrationalTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTests\ExcelImporterUnitTests.cs" />
