--- a/Code/WorkSpeed.Warehouse/WorkSpeed.Warehouse.csproj
+++ b/Code/WorkSpeed.Warehouse/WorkSpeed.Warehouse.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{035D995A-6F8A-47C1-AEBD-41B2CC5D6D7D}</ProjectGuid>
+    <ProjectGuid>{79D720A8-C0A8-4A5F-A4FD-878D0656BC0C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WorkSpeed</RootNamespace>
-    <AssemblyName>WorkSpeed</AssemblyName>
+    <RootNamespace>WorkSpeed.Warehouse</RootNamespace>
+    <AssemblyName>WorkSpeed.Warehouse</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,18 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IWarehouse.cs" />
-    <Compile Include="IWarehouseEntities.cs" />
-    <Compile Include="OperationTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Warehouse.cs" />
-    <Compile Include="WorkSpeedExtensions.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\WorkSpeed.Data\WorkSpeed.Data.csproj">
-      <Project>{72e065c5-8769-4008-9529-11194be488e0}</Project>
-      <Name>WorkSpeed.Data</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
