-add ImportViewModel::IsFileProcessing

--- a/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
+++ b/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
@@ -71,7 +71,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ViewModels\DataImportViewModel.cs" />
+    <Compile Include="ViewModels\ImportViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\ProductivityViewModel.cs" />
     <Compile Include="Views\ImportDataUserControl.xaml.cs">
