--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -132,7 +132,7 @@
       <DependentUpon>20181122130858_InitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\WorkSpeedDbContextModelSnapshot.cs" />
-    <Compile Include="Models\Action.cs" />
+    <Compile Include="Models\EmployeeAction.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Appointment.cs" />
     <Compile Include="Models\BonusesAndPenaltiesKinds.cs" />
