--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -125,6 +125,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Comparers\EmployeeActionComparer.cs" />
+    <Compile Include="Comparers\EmployeeComparer.cs" />
+    <Compile Include="Comparers\OperationComparer.cs" />
+    <Compile Include="Interfaces\IEntity.cs" />
     <Compile Include="IWorkSpeedData.cs" />
     <Compile Include="DataContexts\WorkSpeedDbContext.cs" />
     <Compile Include="Migrations\20181122130858_InitialCreate.cs" />
@@ -142,6 +146,7 @@
     <Compile Include="Models\Document1C.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\GatheringAction.cs" />
+    <Compile Include="Models\InventoryAction.cs" />
     <Compile Include="Models\Operation.cs" />
     <Compile Include="Models\OperationGroups.cs" />
     <Compile Include="Models\PersonnelFileEntry.cs" />
@@ -149,6 +154,7 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductDims.cs" />
     <Compile Include="Models\Rank.cs" />
+    <Compile Include="Models\ReceptionAction.cs" />
     <Compile Include="Models\Salary.cs" />
     <Compile Include="Models\ShipmentAction.cs" />
     <Compile Include="Models\ShipmentComplexity.cs" />
