--- a/Code/WorkSpeed/WorkSpeed.csproj
+++ b/Code/WorkSpeed/WorkSpeed.csproj
@@ -55,9 +55,10 @@
     <Compile Include="BreakConstraintsForNotSmokers.cs" />
     <Compile Include="BreakConstraintsForSmokers.cs" />
     <Compile Include="CategoryConstraints.cs" />
+    <Compile Include="Constraints\BreakConstraints.cs" />
     <Compile Include="FileModels\ActionImportModelComparer.cs" />
-    <Compile Include="Interfaces\IBreakConstraints.cs" />
-    <Compile Include="Interfaces\ICategoryConstraints.cs" />
+    <Compile Include="Constraints\IBreakConstraints.cs" />
+    <Compile Include="Constraints\ICategoryConstraints.cs" />
     <Compile Include="ProductivityCalculator\AddTimeOptions.cs" />
     <Compile Include="ProductivityCalculator\ProductivityCalculator.cs" />
     <Compile Include="ProductivityCalculator\IProductivityCalculator.cs" />
