--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -136,6 +136,7 @@
       <DependentUpon>20181122130858_InitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\WorkSpeedDbContextModelSnapshot.cs" />
+    <Compile Include="Models\ClientGatheringAction.cs" />
     <Compile Include="Models\EmployeeAction.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Appointment.cs" />
@@ -149,6 +150,7 @@
     <Compile Include="Models\InventoryAction.cs" />
     <Compile Include="Models\Operation.cs" />
     <Compile Include="Models\OperationGroups.cs" />
+    <Compile Include="Models\PackingAction.cs" />
     <Compile Include="Models\PersonnelFileEntry.cs" />
     <Compile Include="Models\Position.cs" />
     <Compile Include="Models\Product.cs" />
