--- a/Code/NpoiExcel/NpoiExcel.csproj
+++ b/Code/NpoiExcel/NpoiExcel.csproj
@@ -60,7 +60,9 @@
     <Compile Include="CellPoint.cs" />
     <Compile Include="CellValue.cs" />
     <Compile Include="ExcelImporter.cs" />
+    <Compile Include="TypeRepository.cs" />
     <Compile Include="ITypeConverter.cs" />
+    <Compile Include="ITypeRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SheetTable.cs" />
     <Compile Include="TableRect.cs" />
