-move Attributes into NpoiExcel -add TypeRepository::RegisterType -ref ExcelImporter::ImportData

--- a/Code/NpoiExcel/NpoiExcel.csproj
+++ b/Code/NpoiExcel/NpoiExcel.csproj
@@ -57,6 +57,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\HeaderAttribute.cs" />
+    <Compile Include="Attributes\HiddenAttribute.cs" />
     <Compile Include="CellPoint.cs" />
     <Compile Include="CellValue.cs" />
     <Compile Include="ExcelImporter.cs" />
