--- a/Code/WorkSpeed/WorkSpeed.csproj
+++ b/Code/WorkSpeed/WorkSpeed.csproj
@@ -58,20 +58,22 @@
     <Compile Include="Constraints\BreakConstraints.cs" />
     <Compile Include="Constraints\ITimeConstraint.cs" />
     <Compile Include="Constraints\ITimeConstraintFactory.cs" />
-    <Compile Include="FileModels\ActionImportModelComparer.cs" />
+    <Compile Include="FileModels\Comparers\ActionImportModelComparer.cs" />
     <Compile Include="Constraints\IBreakConstraints.cs" />
     <Compile Include="Constraints\ICategoryConstraints.cs" />
+    <Compile Include="FileModels\EmployeeImportModel.cs" />
     <Compile Include="FileModels\ImportModelConverter.cs" />
-    <Compile Include="FileModels\ImportModelVisiter.cs" />
+    <Compile Include="FileModels\ImportModelVisitor.cs" />
+    <Compile Include="FileModels\ProductImportModel.cs" />
+    <Compile Include="FileModels\WithEmployeeImportModel.cs" />
+    <Compile Include="Interfaces\IImportModelVisitor.cs" />
     <Compile Include="ProductivityCalculator\AddTimeOptions.cs" />
     <Compile Include="ProductivityCalculator\ProductivityCalculator.cs" />
     <Compile Include="ProductivityCalculator\IProductivityCalculator.cs" />
     <Compile Include="ProductivityCalculator\Productivity.cs" />
     <Compile Include="ActionModels\ProductMgh.cs" />
-    <Compile Include="Attributes\HeaderAttribute.cs" />
-    <Compile Include="Attributes\HiddenAttribute.cs" />
-    <Compile Include="FileModels\ActionImportModel.cs" />
-    <Compile Include="FileModels\BaseProductivityImportModel.cs" />
+    <Compile Include="FileModels\EmployeeActionImportModel.cs" />
+    <Compile Include="FileModels\ActionProductImportModel.cs" />
     <Compile Include="FileModels\GatheringImportModel.cs" />
     <Compile Include="FileModels\ImportModel.cs" />
     <Compile Include="FileModels\InventoryImportModel.cs" />
