--- a/Code/WorkSpeed.MvvmBaseLibrary/WorkSpeed.MvvmBaseLibrary.csproj
+++ b/Code/WorkSpeed.MvvmBaseLibrary/WorkSpeed.MvvmBaseLibrary.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -42,11 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CloseRequestedEventArgs.cs" />
+    <Compile Include="IDialog.cs" />
+    <Compile Include="IDialogCloseRequested.cs" />
+    <Compile Include="IDialogRepository.cs" />
     <Compile Include="MvvmCommand.cs" />
     <Compile Include="NotifyingObject.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel.cs" />
+    <Compile Include="ViewRepository.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
