--- a/Code/WorkSpeed.Manager/WorkSpeed.Manager.csproj
+++ b/Code/WorkSpeed.Manager/WorkSpeed.Manager.csproj
@@ -63,5 +63,8 @@
       <Name>WorkSpeed</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
