--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -128,10 +128,9 @@
     <Compile Include="Comparers\EmployeeActionComparer.cs" />
     <Compile Include="Comparers\EmployeeComparer.cs" />
     <Compile Include="Comparers\OperationComparer.cs" />
-    <Compile Include="IProductsAndOperations.cs" />
     <Compile Include="Interfaces\IEntity.cs" />
-    <Compile Include="IWorkSpeedData.cs" />
-    <Compile Include="DbContexts\WorkSpeedDbContext.cs" />
+    <Compile Include="BusinessContexts\IWorkSpeedBusinessContext.cs" />
+    <Compile Include="DataContexts\WorkSpeedDataContext.cs" />
     <Compile Include="Migrations\20181122130858_InitialCreate.cs" />
     <Compile Include="Migrations\20181122130858_InitialCreate.designer.cs">
       <DependentUpon>20181122130858_InitialCreate.cs</DependentUpon>
@@ -167,7 +166,7 @@
     <Compile Include="Models\WorkDay.cs" />
     <Compile Include="Models\WorkDayStates.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WorkSpeedData.cs" />
+    <Compile Include="BusinessContexts\WorkSpeedBusinessContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
