-remove initial migration

--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -131,11 +131,6 @@
     <Compile Include="Interfaces\IEntity.cs" />
     <Compile Include="BusinessContexts\IWorkSpeedBusinessContext.cs" />
     <Compile Include="DataContexts\WorkSpeedDataContext.cs" />
-    <Compile Include="Migrations\20181122130858_InitialCreate.cs" />
-    <Compile Include="Migrations\20181122130858_InitialCreate.designer.cs">
-      <DependentUpon>20181122130858_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\WorkSpeedDbContextModelSnapshot.cs" />
     <Compile Include="Models\ClientGatheringAction.cs" />
     <Compile Include="Models\EmployeeAction.cs" />
     <Compile Include="Models\Address.cs" />
@@ -179,6 +174,9 @@
     <None Include="Seed\SeedFiles\Выработка 28.11.2018 8.00 - 29.11.2018 8.00\Приём товара 28.11.2018 8.00 - 29.11.2018 8.00.xls" />
     <None Include="Seed\SeedFiles\Выработка 28.11.2018 8.00 - 29.11.2018 8.00\ПРР товара 28.11.2018 8.00 - 29.11.2018 8.00.xls" />
     <None Include="Seed\SeedFiles\Выработка 28.11.2018 8.00 - 29.11.2018 8.00\Сотрудники от 29.11.2018 г.xls" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
